RESOLVED FIXED232590
[AX] Fix signature of childrenChanged when !ENABLE(ACCESSIBILITY)
https://bugs.webkit.org/show_bug.cgi?id=232590
Summary [AX] Fix signature of childrenChanged when !ENABLE(ACCESSIBILITY)
Don Olmstead
Reported 2021-11-01 15:59:58 PDT
Broken in r285092
Attachments
Patch (1.86 KB, patch)
2021-11-01 16:05 PDT, Don Olmstead
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-01 16:00:11 PDT
Don Olmstead
Comment 2 2021-11-01 16:05:15 PDT
EWS
Comment 3 2021-11-01 16:56:33 PDT
Committed r285147 (243784@main): <https://commits.webkit.org/243784@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443029 [details].
Andres Gonzalez
Comment 4 2021-11-02 11:40:47 PDT
@Don Olmstead, Sorry about that, and thanks for fixing it! will keep it in mind.
Note You need to log in before you can comment on or make changes to this bug.