[AX] Fix signature of childrenChanged when !ENABLE(ACCESSIBILITY) https://bugs.webkit.org/show_bug.cgi?id=232590 <rdar://problem/84904540>

Unreviewed build fix.

In r285092 the signature of childrenChanged went from AXCoreObject* to AccessibilityObject*
but wasn't updated when accessibility is disabled.


* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::checkedStateChanged):
(WebCore::AXObjectCache::childrenChanged):



Canonical link: https://commits.webkit.org/243784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285147 268f45cc-cd09-0410-ab3c-d52691b4dbfc